tests/compile-fail/integration_suite__integration__general__pseudo_in_const_call.snap
---
source: tests/integration/general.rs
expression: stderr
---
error: unexpected token `(`
   ┌─ <input>:25:22
   │
25 │         const int foo(int x) { return x; }
   │                      ^ unexpected token
   │
   = 
     Expected one of ",", ";" or "="


